# radar-workstation

./: .gitignore  Cargo.toml  LICENSE
crates/nexrad-decoder/: Cargo.toml
crates/nexrad-decoder/src/: error.rs  lib.rs
crates/nexrad-decoder/src/parse/: blocks.rs  cursor.rs  mod.rs  moment.rs  radial.rs
crates/nexrad-decoder/src/types/: mod.rs  moment.rs  radial.rs  tilt.rs  volume_constants.rs  volume_scan.rs
crates/nexrad-decoder/tests/: decode_radial.rs
crates/radar-workstation/: Cargo.toml
crates/radar-workstation/src/: args.rs  chunk.rs  data_acquisition.rs  lib.rs  main.rs
crates/radar-workstation/tests/: args.rs  data_acquisition.rs
docs/: PHILOSOPHY.md  REQUIREMENTS.md  open-questions.md
docs/adr/: 0001-use-rust.md  0002-use-egui.md  0003-use-wgpu.md  0004-use-tokio.md  0005-use-rayon.md  0006-bundle-shapefiles.md  0007-tile-providers.md  0008-custom-decoder.md  0009-open-source.md  0010-workspace-structure.md  0011-chunk-stream-data-source.md  0011-data-source.md  0012-volume-assembly-state-machine.md
docs/architecture/: data-flow.md  nexrad-binary-format.md  nexrad-data-types.md  overview.md  rendering.md
utility/: README.md
utility/nexrad-inspect/: gen_fixtures.py  inspect_chunk_start.py  inspect_geometry.py  inspect_messages.py  metpy_inspect_compression.py  metpy_inspect_header.py  metpy_inspect_metadata.py  nexrad_msg31.py
